--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
+    "react-number-format": "^5.4.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
